--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5691"
+       "0.608"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,8 +144,8 @@
     "simulation = nrows = 10000\n",
     "days = ncols = 5\n",
     "#Then I simulated the average of purchases per day being about 3 give or take 1.5 poptarts\n",
-    "#You can't buy half a bag of poptarts so I rounded up and down being about 1 to 5 poptarts per day are purchased on average\n",
-    "m_th_poptarts = np.random.choice([1, 2, 3, 4, 5], simulation * days).reshape(nrows, ncols)\n",
+    "#You can't buy half a bag of poptarts so I rounded up and down being about 2 to 4 poptarts per day are purchased on average\n",
+    "m_th_poptarts = np.random.choice([2, 3, 4], simulation * days).reshape(nrows, ncols)\n",
     "#Once I had the rows, I created a lambda function to subtract the total from the week from 17 for each row\n",
     "#Then I returned booleans for each row that did have at least 1 left and took the mean to get the odds being able to get one on Friday\n",
     "poptarts_left = (pd.DataFrame(m_th_poptarts).apply(lambda poptart: (17 - poptart.sum()) > 1, axis =1)).mean()\n",
@@ -154,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0797"
+       "0.217"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +174,8 @@
     "#I created an empty dataframe\n",
     "heights = pd.DataFrame()\n",
     "#Then I filled the dataframe with men and woman random numbers within each range of heights\n",
-    "heights[\"men\"] = np.random.choice(range(170, 186), size = 10000)\n",
-    "heights[\"women\"] = np.random.choice(range(164,176), size = 10000)\n",
+    "heights[\"men\"] = np.random.normal(178, 8, 10000)\n",
+    "heights[\"women\"] = np.random.normal(170, 6, 10000)\n",
     "#Then returned booleans that were true in the situation that the woman was taller than the man\n",
     "w_taller_m = heights.men < heights.women\n",
     "w_taller_m.mean()"
