--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -183,198 +183,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9959"
+       "0.8159"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#6\n",
-    "#I first created a dataframe with 2 columns, one for the list of students and one for the odds of getting corrupted\n",
-    "corruption = pd.DataFrame()\n",
-    "corruption[\"is_corrupted\"] = np.random.choice(range(1, 250), size = 10000)\n",
-    "corruption[\"student\"] = np.random.choice(range(1, 50), size = 10000)\n",
+    "#6a\n",
+    "#I wrote out 0 to be failed and 1 to be passed, then added the probability to add the weight\n",
+    "installs = np.random.choice([0, 1], size = (10000, 50), p= (1/250, 249/250))\n",
     "#Then I wanted to return true for the students who are not that 1 chance that it would crash\n",
-    "no_issue = corruption.is_corrupted != 1\n",
-    "no_issue.mean()"
+    "no_issues = (pd.DataFrame(installs).apply(lambda install: install.sum() == 50, axis=1))\n",
+    "no_issues.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9953"
+       "0.6691"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#6b\n",
     "#Same as above then change to 100 students, instead of 50\n",
-    "corruption = pd.DataFrame()\n",
-    "corruption[\"is_corrupted\"] = np.random.choice(range(1, 250), size = 10000)\n",
-    "corruption[\"student\"] = np.random.choice(range(1, 100), size = 10000)\n",
-    "no_issue = corruption.is_corrupted > 1\n",
-    "no_issue.mean()"
+    "installs = np.random.choice([0, 1], size = (10000, 100), p= (1/250, 249/250))\n",
+    "#Then I wanted to return true for the students who are not that 1 chance that it would crash\n",
+    "no_issues = (pd.DataFrame(installs).apply(lambda install: install.sum() == 100, axis=1))\n",
+    "no_issues.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'float' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-170-4bfb8f887bf0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mDays\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Monday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Tuesday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Wednesday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Thursday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Friday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Saturday\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Sunday\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m.70\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mDays\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'float' has no len()"
-     ]
-    }
-   ],
-   "source": [
-    "#7\n",
-    "Days = np.random.choice([\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"], size=10000, p= .70)\n",
-    "Days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>person</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>42</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>348</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>151</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>236</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>136</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>73</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>240</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>53</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>255</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>208</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      day  person\n",
-       "0      42      20\n",
-       "1     348       8\n",
-       "2     151       9\n",
-       "3     236      12\n",
-       "4     136      21\n",
-       "...   ...     ...\n",
-       "9995   73      18\n",
-       "9996  240      19\n",
-       "9997   53      22\n",
-       "9998  255       4\n",
-       "9999  208       5\n",
-       "\n",
-       "[10000 rows x 2 columns]"
+       "0.4598"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "birthdays = pd.DataFrame()\n",
-    "birthdays[\"day\"] = np.random.choice(range(1, 365), size = 10000)\n",
-    "birthdays[\"person\"] = np.random.choice(range(1,23), size = 10000)\n",
-    "same_birthday = "
+    "#6c\n",
+    "#Same as above then change to 100 students, instead of 50\n",
+    "installs = np.random.choice([0, 1], size = (10000, 150), p= (1/250, 249/250))\n",
+    "#Instead of equaling to 150, I switched it to less than to take into account all the ones that crashed\n",
+    "no_issues = (pd.DataFrame(installs).apply(lambda install: install.sum() < 150, axis=1))\n",
+    "no_issues.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1655"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#6d\n",
+    "#Same as above then change to 450 students, instead of 100\n",
+    "installs = np.random.choice([0, 1], size = (10000, 450), p= (1/250, 249/250))\n",
+    "#Then I wanted to return true for the students who are not that 1 chance that it would crash\n",
+    "no_issues = (pd.DataFrame(installs).apply(lambda install: install.sum() == 450, axis=1))\n",
+    "no_issues.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.122"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7a\n",
+    "#First I wanted to create a dataframe with all the values for each day\n",
+    "trucks = pd.DataFrame()\n",
+    "# The options I put in were 0 for a truck is not there, and 1 for a truck is there\n",
+    "trucks[\"day1\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day2\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day3\"] = np.random.choice([0, 1], 10000)\n",
+    "#Then I wanted to have a boolean return all the trues that equal zero for no trucks\n",
+    "truck_not_there = (trucks.sum(axis=1)) == 0\n",
+    "truck_not_there.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.992"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7b\n",
+    "#Same as above but I added more days to account for the week\n",
+    "trucks = pd.DataFrame()\n",
+    "trucks[\"day1\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day2\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day3\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day4\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day5\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day6\"] = np.random.choice([0, 1], 10000)\n",
+    "trucks[\"day7\"] = np.random.choice([0, 1], 10000)\n",
+    "truck_not_there = (trucks.sum(axis=1)) > 0\n",
+    "truck_not_there.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8"
    ]
   },
   {
