--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -347,6 +347,7 @@
    ],
    "source": [
     "#Theoritcal\n",
+    "#Same as above\n",
     "s_grades = stats.norm(3.0, .3).ppf(.95)\n",
     "s_grades"
    ]
@@ -370,7 +371,10 @@
    "source": [
     "#3\n",
     "#Experimental\n",
+    "#For this question, I first had to figure out what type of distribution it was, I figured binomial since it's based on attempts vs successes\n",
+    "#Then I inputed the data provided to be 4326 attempts and the percent of success\n",
     "clicks = np.random.binomial(4326, .02, 100000)\n",
+    "#After that, I wanted to return the odds of getting 97 clicks\n",
     "one_day_clicks = clicks == 97\n",
     "one_day_clicks.mean()"
    ]
@@ -393,8 +397,59 @@
    ],
    "source": [
     "#Theoretical\n",
+    "#Same concept as above, but using the stats function for binomial and submitting the inputs to return the probability\n",
     "s_clicks = stats.binom(4326, .02).pmf(97)\n",
     "s_clicks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45709"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4\n",
+    "#experimental\n",
+    "#I first needed to figure out how many answer choices the student could randomly pick from\n",
+    "#I figured this out with simple math, there are up to the hundreth decimal place, each place has 10 numbers\n",
+    "# 10 * 10 is 100 and there are 100 answer choices so in total, there are 10,000 answer options in all\n",
+    "chance = 1 / 100\n",
+    "answers = np.random.binomial(60, chance, 100000)\n",
+    "got_one_right = answers >= 1\n",
+    "got_one_right.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4528433576092388"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Theoretical\n",
+    "s_got_one_right = stats.binom(60, chance).sf(0)\n",
+    "s_got_one_right"
    ]
   },
   {
@@ -402,9 +457,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#4\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
